FIX(slide): Revise toast warning and make links more legible

--- a/client/index.scss
+++ b/client/index.scss
@@ -58,7 +58,7 @@ body {
 }
 
 .markdown-speaker-container{
-  
+
 }
 
 // --------------- Flexbox Default Styles --------------
@@ -614,4 +614,10 @@ div.slide-view-live.has-footer > #main{
   overflow: auto;
   max-height: 100%;
   padding-left: 25px
+}
+
+.dqpl-toast-error {
+  a {
+    color: white;
+  }
 }
